--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos Alura</title>
+    <title>Lista de Cursos do Alura</title>
 </head>
 <body>
     <ul>
