adicionado um novo curso

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Item C</li>
         <li>Item D</li>
         <li>Item E</li>
+        <li>Item F adicionado</li>
     </ul>
     
 </body>
