--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Item A</li>
         <li>Item B</li>
         <li>Item C</li>
-        <li>Item D</li>
+        <li>Curso de Docker</li>
         <li>Item E ajustado novamente</li>
     </ul>
     
