adicionado novo curso

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <ul>
         <li>Item A</li>
         <li>Item B</li>
-        <li>Item C</li>
-        <li>Curso de Docker</li>
+        <li>Novo Curso</li>
+        <li>Lista de Curso de Docker sem dor de cabeça</li>
         <li>Item E ajustado novamente</li>
     </ul>
     
