--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>Item D</li>
         <li>Item E</li>
         <li>Item F adicionado</li>
+        <li>Novo Item H</li>
     </ul>
     
 </body>
