--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Lista de Curso de Docker sem dor de cabeça</li>
         <li>Item C</li>
         <li>Item D</li>
-        <li>Item E</li>
+        <li>Novo curso de Java</li>
         <li>Item F adicionado</li>
         <li>Novo Item H</li>
     </ul>
